  ``register_auto``, you can use ``methodify_auto``::

     Context.my_method = reg.methodify_auto(some_function)

- The second argument for ``match_class`` is now optional; if you
  don't supply it ``match_class`` will generate a predicate function
  that extracts that name by default.

- Include doctests in Tox and Travis.

0.9.3 (2016-07-18)
==================

- Minor fixes to documentation.

- Add tox test environments for Python 3.4 and 3.5, PyPy 3 and PEP 8.

- Make Python 3.5 the default Python environment.

- Changed location ``NoImplicitLookupError`` was imported from in
  ``__init__.py``.

0.9.2 (2014-11-13)
==================

- Reg was a bit too strict; when you had multiple (but not single)
  predicates, Reg would raise KeyError when you put in an unknown
  key. Now they're just being silently ignored, as they don't do any
  harm.

- Eliminated a check in ``ArgExtractor`` that could never take place.

- Bring test coverage back up to 100%.

- Add converage configuration to ignore test files in coverage
  reporting.

0.9.1 (2014-11-11)
==================

- A bugfix in the behavior of the fallback logic. In situations with
  multiple predicates of which one is a class predicate it was
  possible for a fallback not to be found even though a fallback was
  available.

0.9 (2014-11-11)
================

Total rewrite of Reg! This includes a range of changes that can break
code. The primary motivations for this rewrite:

* unify predicate system with class-based lookup system.

* extract dispatch information from specific arguments instead of all
  arguments.

Some specific changes:

* Replaced ``@reg.generic`` decorator with ``@reg.dispatch()``
  decorator. This decorator can be configured with predicates that
  extract information from the arguments. Rewrite this::

    @reg.generic
    def foo(obj):
       pass

  to this::

    @reg.dispatch('obj')
    def foo(obj):
       pass

  And this::

    @reg.generic
    def bar(a, b):
        pass
