@@ -1,35 +1,0 @@
-[buildout]
-develop = .
-parts = devpython scripts sphinxbuilder sphinxpython releaser
-versions = versions
-show-picked-versions = false
-
-[versions]
-twine = 1.6.5
-
-[devpython]
-recipe = zc.recipe.egg
-interpreter = devpython
-eggs = reg
-       flake8
-       radon
-
-[scripts]
-recipe = zc.recipe.egg:scripts
-eggs = reg [test]
-       pytest
-
-[sphinxbuilder]
-recipe = collective.recipe.sphinxbuilder
-source = ${buildout:directory}/doc
-build = ${buildout:directory}/doc/build
-interpreter = ${buildout:directory}/bin/sphinxpython
-
-[sphinxpython]
-recipe = zc.recipe.egg
-interpreter = ${:_buildout_section_name_}
-eggs = reg
-
-[releaser]
-recipe = zc.recipe.egg
-eggs = zest.releaser
