@@ -4,48 +4,65 @@ Developing Reg
 Install Reg for development
 ---------------------------
 
-First make sure you have virtualenv_ installed for Python 3.5.
+.. highlight:: console
 
-.. _virtualenv: https://pypi.python.org/pypi/virtualenv
-
-Now create a new virtualenv somewhere for Reg's development::
-
-  $ virtualenv /path/to/ve_reg
-
-The goal of this is to isolate you from any globally installed
-versions of setuptools, which may be incompatible with the
-requirements of the buildout tool. You should also be able to recycle
-an existing virtualenv, but this method guarantees a clean one.
-
-Clone Reg from github (https://github.com/morepath/reg) and go to the
-reg directory::
+Clone Reg from github::
 
   $ git clone git@github.com:morepath/reg.git
+
+If this doesn't work and you get an error 'Permission denied (publickey)',
+you need to upload your ssh public key to github_.
+
+Then go to the reg directory::
+
   $ cd reg
 
-Now we need to run bootstrap.py to set up buildout, using the Python from the
-virtualenv we've created before::
+Make sure you have virtualenv_ installed.
 
-  $ /path/to/ve_reg/bin/python bootstrap.py
+Create a new virtualenv for Python 3 inside the reg directory::
 
-This installs buildout, which can now set up the rest of the development
-environment::
+  $ virtualenv -p $(which python3) env/py3
 
-  $ bin/buildout
+Activate the virtualenv::
 
-This will download and install various dependencies and tools.
+  $ source env/py3/bin/activate
+
+Install the various dependencies and development tools from
+develop_requirements.txt::
+
+  $ pip install -Ur develop_requirements.txt
+
+For upgrading the requirements just run the command again.
+
+If you want to test Reg with Python 2.7 as well you can create a
+second virtualenv for it::
+
+  $ virtualenv -p $(which python2.7) env/py27
+
+You can then activate it::
+
+  $ source env/py27/bin/activate
+
+and install the develop requirements as described above.
+
+.. note::
+
+   The following commands work only if you have the virtualenv activated.
+
+.. _github: https://help.github.com/articles/generating-an-ssh-key
+
+.. _virtualenv: https://pypi.python.org/pypi/virtualenv
 
 Running the tests
 -----------------
 
-You can run the tests using `py.test`_. Buildout will have installed
-it for you in the ``bin`` subdirectory of your project::
+You can run the tests using `py.test`_::
 
-  $ bin/py.test reg
+  $ py.test
 
 To generate test coverage information as HTML do::
 
-  $ bin/py.test --cov reg --cov-report html
+  $ py.test --cov reg --cov-report html
 
 You can then point your web browser to the ``htmlcov/index.html`` file
 in the project directory and click on modules to see detailed coverage
@@ -59,24 +76,49 @@ Running the documentation tests
 The documentation contains code. To check these code snippets, you
 can run this code using this command::
 
-  $ bin/sphinxpython bin/sphinx-build  -b doctest doc out
+  $ sphinx-build -b doctest doc doc/build/doctest
+
+Or alternatively if you have ``Make`` installed::
+
+  $ cd doc
+  $ make doctest
+
+Or from the Reg project directory::
+
+  $ make -C doc doctest
+
+Since the sample code in the documentation is maintained in Python 3
+syntax, we do not support running the doctests with Python 2.7.
 
 Building the HTML documentation
 -------------------------------
 
 To build the HTML documentation (output in ``doc/build/html``), run::
 
-  $ bin/sphinxbuilder
+  $ sphinx-build doc doc/build/html
+
+Or alternatively if you have ``Make`` installed::
+
+  $ cd doc
+  $ make html
+
+Or from the Reg project directory::
+
+  $ make -C doc html
 
 Various checking tools
 ----------------------
 
-The buildout will also have installed flake8_, which is a tool that
-can do various checks for common Python mistakes using pyflakes_,
-check for PEP8_ style compliance and can do `cyclomatic complexity`_
-checking. To do pyflakes and pep8 checking do::
+flake8_ is a tool that can do various checks for common Python
+mistakes using pyflakes_, check for PEP8_ style compliance and
+can do `cyclomatic complexity`_ checking. To do pyflakes and pep8
+checking do::
 
-  $ bin/flake8 reg
+  $ flake8 reg
+
+To also show cyclomatic complexity, use this command::
+
+  $ flake8 --max-complexity=10 reg
 
 .. _flake8: https://pypi.python.org/pypi/flake8
 
@@ -86,6 +128,47 @@ checking. To do pyflakes and pep8 checking do::
 
 .. _`cyclomatic complexity`: https://en.wikipedia.org/wiki/Cyclomatic_complexity
 
-To also show cyclomatic complexity, use this command::
+Tox
+---
 
-  $ bin/flake8 --max-complexity=10 reg
+Install tox to check Reg works with the versions of Python it
+supports.
+
+We have Travis continuous integration installed on Reg's github
+repository and it runs the same tox tests after each checkin.
+
+First you should install all Python versions which you want to
+test. The versions which are not installed will be skipped. You should
+at least install Python 3.5 which is required by flake8, coverage and
+doctests and Python 2.7 for testing Reg with Python 2.
+
+One tool you can use to install multiple versions of Python is pyenv_.
+
+Create and activate a new virtualenv for tox::
+
+  $ virtualenv env/tox
+  $ source env/tox/bin/activate
+
+Make sure you have recent setuptools and pip installed::
+
+  $ pip install -U setuptools pip
+
+Now you can install tox::
+
+  $ pip install -U tox
+
+To find out which test environments are defined for Reg in tox.ini run::
+
+  $ tox -l
+
+You can run all tox tests with::
+
+  $ tox
+
+You can also specify a test environment to run::
+
+  $ tox -e py35
+  $ tox -e pep8
+  $ tox -e docs
+
+.. _pyenv: https://github.com/yyuu/pyenv
