@@ -1,28 +1,32 @@
 [tox]
 envlist = py27,py33,py34,py35,pypy,pypy3,coverage,pep8,docs
+skipsdist = True
+skip_missing_interpreters = True
 
 [testenv]
+usedevelop = True
 deps = -e{toxinidir}[test]
-commands = py.test {posargs}
+commands = py.test reg {posargs}
 
 [testenv:coverage]
 basepython = python3.5
 deps = {[testenv]deps}
-       coveralls
+       -e{toxinidir}[coverage]
 
-commands = py.test reg --cov reg {posargs}
+commands =
+    coverage run --source reg -m py.test reg {posargs}
+    coverage report -m
 
 [testenv:pep8]
 basepython = python3.5
-deps = {[testenv]deps}
-       flake8
+deps = -e{toxinidir}[pep8]
+usedevelop = False
 
-commands = flake8 reg setup.py
+commands = flake8 --show-source reg setup.py
 
 [testenv:docs]
 basepython = python3.5
-deps = {[testenv]deps}
-       sphinx
+deps = -e{toxinidir}[docs]
 
 commands = sphinx-build -b doctest doc {envtmpdir}
 
